data/cloudformation_collected_templates_new/template_13858_hello-application.yaml
# hello-application.yaml
AWSTemplateFormatVersion: "2010-09-09"
Parameters:
  Environment:
    Description: Name of Environments
    Type: String
    AllowedValues:
      - Dev
      - Test
      - UAT
      - Prod
      - dev
      - test
      - uat
      - prod
  VpcId:
    Description: VPC ID
    Type: String
  StackName:
    Description: Name of the Stack
    Type: String
    AllowedPattern: '[a-zA-Z0-9_\-]*'
    ConstraintDescription: must be alphanumeric
  PrivateAppSubnet01Id:
    Description: Private App Subnet 01 ID
    Type: String
  PrivateAppSubnet02Id:
    Description: Private App Subnet 02 ID
    Type: String
  PrivateAppSubnet03Id:
    Description: Private App Subnet 03 ID
    Type: String
  WebLoadBalancerArnName:
    Description: Web Load Balancer ARN Name
    Type: String
Mappings:
  Applications:
    HelloPython:
      Repository: ghcr.io/nashtech-vietvuhoang1/hello-python
      Version: 0.0.3
Resources:
  WebApplicationSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH access via port 22
      GroupName: WebApplicationSecurityGroup
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '8080'
          ToPort: '8080'
          CidrIp: 10.0.0.0/24
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '8080'
          CidrIp: 10.0.0.0/24
      Tags:
        - Key: Application
          Value: !Ref StackName
        - Key: Network
          Value: !Join
            - "-"
            - - !Ref StackName
              - !Ref Environment
        - Key: Name
          Value: !Join
            - "-"
            - - !Ref StackName
              - !Ref Environment
              - WebApplicationSecurityGroup
        - Key: Env
          Value: !Ref Environment
  ECSExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
            Action: "sts:AssumeRole"
      Policies:
        - PolicyName: !Sub "${StackName}-${Environment}-EcsExPlcy"
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - "ecr:GetDownloadUrlForLayer"
                  - "ecr:BatchGetImage"
                  - "ecr:GetAuthorizationToken"
                  - "logs:CreateLogStream"
                  - "logs:PutLogEvents"
                Resource: "*"
      Tags:
        - Key: Application
          Value: !Ref StackName
        - Key: Network
          Value: !Join
            - "-"
            - - !Ref StackName
              - !Ref Environment
        - Key: Name
          Value: !Join
            - "-"
            - - !Ref StackName
              - !Ref Environment
              - LogGroup
        - Key: Env
          Value: !Ref Environment
  # Log Group for ECS
  LogGroup:
    Type: AWS::Logs::LogGroup
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete
    Properties:
      LogGroupName: !Sub "/ecs/${StackName}/${Environment}/hello-python"
      RetentionInDays: 7
      Tags:
        - Key: Application
          Value: !Ref StackName
        - Key: Network
          Value: !Join
            - "-"
            - - !Ref StackName
              - !Ref Environment
        - Key: Name
          Value: !Join
            - "-"
            - - !Ref StackName
              - !Ref Environment
              - LogGroup
        - Key: Env
          Value: !Ref Environment
  # Target Group for ECS
  ECSTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: !Sub "${StackName}-${Environment}-tg"
      VpcId: !Ref VpcId
      Port: 8080
      Protocol: HTTP
      TargetType: ip
      HealthCheckIntervalSeconds: 30
      HealthCheckPath: /ping
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 5
      UnhealthyThresholdCount: 2
      Tags:
        - Key: Application
          Value: !Ref StackName
        - Key: Network
          Value: !Join
            - "-"
            - - !Ref StackName
              - !Ref Environment
        - Key: Name
          Value: !Join
            - "-"
            - - !Ref StackName
              - !Ref Environment
              - ECSTargetGroup
        - Key: Env
          Value: !Ref Environment
  # Listener for the ALB
  ALBListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref ECSTargetGroup
      LoadBalancerArn: !Ref WebLoadBalancerArnName
      Port: 80
      Protocol: HTTP
  # ECS Cluster
  ECSCluster:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: !Sub "${StackName}-${Environment}-ecscls"
      Tags:
        - Key: Application
          Value: !Ref StackName
        - Key: Network
          Value: !Join
            - "-"
            - - !Ref StackName
              - !Ref Environment
        - Key: Name
          Value: !Join
            - "-"
            - - !Ref StackName
              - !Ref Environment
              - ECSCluster
        - Key: Env
          Value: !Ref Environment
  # ECS Task Definition
  ECSTaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      Family: !Sub "${StackName}-${Environment}-hp-tsk"
      NetworkMode: awsvpc
      Cpu: "256"
      Memory: "512"
      RequiresCompatibilities:
        - FARGATE
      ExecutionRoleArn: !GetAtt ECSExecutionRole.Arn
      ContainerDefinitions:
        - Name: hello-python-container
          Image: !Join
            - ":"
            - - !FindInMap [Applications, HelloPython, Repository]
              - !FindInMap [Applications, HelloPython, Version]
          Essential: true
          PortMappings:
            - ContainerPort: 8080
              HostPort: 8080
              Protocol: tcp
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: !Ref LogGroup
              awslogs-region: !Ref "AWS::Region"
              awslogs-stream-prefix: hello-python
      Tags:
        - Key: Application
          Value: !Ref StackName
        - Key: Network
          Value: !Join
            - "-"
            - - !Ref StackName
              - !Ref Environment
        - Key: Name
          Value: !Join
            - "-"
            - - !Ref StackName
              - !Ref Environment
              - ECSService
        - Key: Env
          Value: !Ref Environment
  # ECS Service
  ECSService:
    Type: AWS::ECS::Service
    Properties:
      ServiceName: !Sub "${StackName}-${Environment}-hp-svc"
      Cluster: !Ref ECSCluster
      TaskDefinition: !Ref ECSTaskDefinition
      DesiredCount: 2
      LaunchType: FARGATE
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: ENABLED
          Subnets:
            - !Ref PrivateAppSubnet01Id
            - !Ref PrivateAppSubnet02Id
            - !Ref PrivateAppSubnet03Id
          SecurityGroups:
            - !Ref WebApplicationSecurityGroup
      LoadBalancers:
        - ContainerName: hello-python-container
          ContainerPort: 8080
          TargetGroupArn: !Ref ECSTargetGroup
      Tags:
        - Key: Application
          Value: !Ref StackName
        - Key: Network
          Value: !Join
            - "-"
            - - !Ref StackName
              - !Ref Environment
        - Key: Name
          Value: !Join
            - "-"
            - - !Ref StackName
              - !Ref Environment
              - ECSService
        - Key: Env
          Value: !Ref Environment
